--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,14 +10,17 @@
     "@testing-library/react": "^11.2.3",
     "@testing-library/user-event": "^12.6.0",
     "axios": "^0.21.1",
+    "chart.js": "^3.3.2",
     "date-fns": "^2.16.1",
     "dateformat": "^4.4.1",
     "material-ui": "^0.20.2",
     "node-sass": "^4.14.1",
     "react": "^17.0.1",
     "react-beautiful-dnd": "^13.0.0",
+    "react-chartjs-2": "^3.0.3",
     "react-date-range": "^1.1.3",
     "react-dom": "^17.0.1",
+    "react-facebook-login": "^4.1.1",
     "react-redux": "^7.2.2",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.1",
