--- a/frontend/package.json
+++ b/frontend/package.json
@@ -14,9 +14,11 @@
     "date-fns": "^2.16.1",
     "dateformat": "^4.4.1",
     "material-ui": "^0.20.2",
+    "moment": "^2.29.1",
     "node-sass": "^4.14.1",
     "react": "^17.0.1",
     "react-beautiful-dnd": "^13.0.0",
+    "react-big-calendar": "^0.33.5",
     "react-chartjs-2": "^3.0.3",
     "react-date-range": "^1.1.3",
     "react-dom": "^17.0.1",
